--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,10 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    testImplementation 'com.codeborne:selenide:5.11.0'
+    testImplementation 'com.codeborne:selenide:5.10.0'
 }
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
