--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,4 @@
-image: Ubuntu
-
-stack: jdk 11
+image: Ubuntu1804
 
 branches:
   only:
@@ -9,7 +7,10 @@ branches:
 build: off
 
 install:
-  - java -jar ./artifacts/app-card-delivery.jar &
+  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-order.jar" -PassThru
 
 build_script:
-  - ./gradlew test --info
+  - ps: ./gradlew test --info "-Dselenide.headless=true"
+
+on_finish:
+  - ps: Stop-Process -Id $App.Id
