--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ stack: jdk 11
 build: off
 
 install:
-  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-order.jar" -PassThru
+  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-card-delivery.jar" -PassThru
 
 build_script:
   - ps: ./gradlew test --info "-Dselenide.headless=true"
